--- a/state02.html
+++ b/state02.html
@@ -16,35 +16,57 @@
     // ⭐변수 사용 x⭐
     // let counter = 0;
 
-    // ** useState, modifier사용 **
+    // ** useState : 배열 2개 줌 **
     function App() {
-      const [counter, modifier] = React.useState(0);
-      //   const data = React.useState(0);
+      const [counter, setCounter] = React.useState(0);
+      const onClick = () => {
+        setCounter(counter + 1);
+      };
+      console.log("rendered");
+      console.log(counter);
 
+      /*
+      const [counter, modifier] = React.useState(0);
+      const onClick = () => {
+        modifier(987987987);
+        // // modifier 함수 내에서 일어남
+        // counter(987987987);
+        // ReactDOM.render(<App />, root);
+      };*/
+
+      /*
+      let [counter, modifier] = React.useState(0);
+      const onClick = () => {
+        counter += 1;
+        // console.log(counter);
+        ReactDOM.render(<App />, root); //함수 재호출 일으킴
+      };
+      */
+      //   const data = React.useState(0);
       //   console.log(data);
       /*
       Array 2개
       [undefined, ƒ]
       0: undefined - 데이터
-      1: ƒ () - 데이터를 바꿀 때 사용하는 함수
+      1: ƒ () - 데이터 값을 바꿀 때 사용하는 함수
       */
-
       return (
         <div>
-          <h3>Total clicks: 0</h3>
-          <button>Click me</button>
+          <h3>Total clicks: {counter}</h3>
+          <button onClick={onClick}>Click me</button>
         </div>
       );
     }
     ReactDOM.render(<App />, root);
 
-    // 배열 꺼낼 때 지름길 (아래 대신)
+    // 배열 꺼낼 때 지름길 (아래2줄 대신)
     // const favFood = food[0]
     // const favFood2 = food[1]
-
+    /*
     const food = ["tomato", "potato"];
     const [favFood, favFood2] = food;
     console.log(favFood); //tomato
     console.log(favFood2); //potato
+    */
   </script>
 </html>
